--- a/mat2/Benchmarks.ipynb
+++ b/mat2/Benchmarks.ipynb
@@ -11,12 +11,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can do some data analysis on the times and see what happens"
+    "The Simple Mat2 demo uses my Benchmark.h file to write data to a csv file.\n",
+    "\n",
+    "The Data is in the format\n",
+    "\n",
+    "AVX2,Unroll,SIMD,Operator,Prefetch,Normal\n",
+    "5339,6472,5290,5516,5591,54882\n",
+    "62,62,59,67,102,70\n",
+    "51,52,51,49,92,55\n",
+    "52,52,49,50,92,52\n",
+    "\n",
+    "Pandas can read this CSV format and build a dataset for analysis as follows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -60,25 +70,25 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>57.492188</td>\n",
-       "      <td>56.076172</td>\n",
-       "      <td>55.457031</td>\n",
-       "      <td>54.491211</td>\n",
-       "      <td>55.067383</td>\n",
-       "      <td>96.928711</td>\n",
+       "      <td>57.023438</td>\n",
+       "      <td>56.607422</td>\n",
+       "      <td>54.626953</td>\n",
+       "      <td>54.212891</td>\n",
+       "      <td>71.319336</td>\n",
+       "      <td>104.146484</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>180.665610</td>\n",
-       "      <td>198.820215</td>\n",
-       "      <td>181.636237</td>\n",
-       "      <td>183.699018</td>\n",
-       "      <td>169.465932</td>\n",
-       "      <td>1424.737928</td>\n",
+       "      <td>165.228339</td>\n",
+       "      <td>200.689886</td>\n",
+       "      <td>163.769625</td>\n",
+       "      <td>170.852745</td>\n",
+       "      <td>541.245758</td>\n",
+       "      <td>1713.481841</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>49.000000</td>\n",
+       "      <td>50.000000</td>\n",
        "      <td>49.000000</td>\n",
        "      <td>47.000000</td>\n",
        "      <td>47.000000</td>\n",
@@ -91,17 +101,17 @@
        "      <td>49.000000</td>\n",
        "      <td>49.000000</td>\n",
        "      <td>48.000000</td>\n",
-       "      <td>49.000000</td>\n",
-       "      <td>52.000000</td>\n",
+       "      <td>48.000000</td>\n",
+       "      <td>50.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
        "      <td>52.000000</td>\n",
-       "      <td>49.000000</td>\n",
+       "      <td>50.000000</td>\n",
        "      <td>49.000000</td>\n",
        "      <td>48.000000</td>\n",
        "      <td>49.000000</td>\n",
-       "      <td>53.000000</td>\n",
+       "      <td>50.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
@@ -110,13 +120,13 @@
        "      <td>50.000000</td>\n",
        "      <td>50.000000</td>\n",
        "      <td>50.000000</td>\n",
-       "      <td>53.000000</td>\n",
+       "      <td>51.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>90%</th>\n",
        "      <td>54.000000</td>\n",
        "      <td>52.000000</td>\n",
-       "      <td>52.000000</td>\n",
+       "      <td>51.000000</td>\n",
        "      <td>50.000000</td>\n",
        "      <td>51.000000</td>\n",
        "      <td>53.000000</td>\n",
@@ -127,60 +137,60 @@
        "      <td>53.000000</td>\n",
        "      <td>52.000000</td>\n",
        "      <td>52.000000</td>\n",
-       "      <td>58.850000</td>\n",
-       "      <td>54.000000</td>\n",
+       "      <td>92.000000</td>\n",
+       "      <td>53.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99.9%</th>\n",
-       "      <td>58.954000</td>\n",
-       "      <td>59.931000</td>\n",
-       "      <td>71.563000</td>\n",
+       "      <td>61.839000</td>\n",
+       "      <td>107.919000</td>\n",
        "      <td>58.839000</td>\n",
-       "      <td>94.977000</td>\n",
-       "      <td>71.793000</td>\n",
+       "      <td>66.724000</td>\n",
+       "      <td>5464.753000</td>\n",
+       "      <td>69.655000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>5833.000000</td>\n",
-       "      <td>6412.000000</td>\n",
-       "      <td>5862.000000</td>\n",
-       "      <td>5927.000000</td>\n",
-       "      <td>5471.000000</td>\n",
-       "      <td>45644.000000</td>\n",
+       "      <td>5339.000000</td>\n",
+       "      <td>6472.000000</td>\n",
+       "      <td>5290.000000</td>\n",
+       "      <td>5516.000000</td>\n",
+       "      <td>16464.000000</td>\n",
+       "      <td>54882.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              AVX2       Unroll         SIMD     Operator     Prefetch  \\\n",
-       "count  1024.000000  1024.000000  1024.000000  1024.000000  1024.000000   \n",
-       "mean     57.492188    56.076172    55.457031    54.491211    55.067383   \n",
-       "std     180.665610   198.820215   181.636237   183.699018   169.465932   \n",
-       "min      49.000000    49.000000    47.000000    47.000000    47.000000   \n",
-       "25%      51.000000    49.000000    49.000000    48.000000    49.000000   \n",
-       "50%      52.000000    49.000000    49.000000    48.000000    49.000000   \n",
-       "75%      53.000000    51.000000    50.000000    50.000000    50.000000   \n",
-       "90%      54.000000    52.000000    52.000000    50.000000    51.000000   \n",
-       "99%      54.000000    53.000000    52.000000    52.000000    58.850000   \n",
-       "99.9%    58.954000    59.931000    71.563000    58.839000    94.977000   \n",
-       "max    5833.000000  6412.000000  5862.000000  5927.000000  5471.000000   \n",
+       "              AVX2       Unroll         SIMD     Operator      Prefetch  \\\n",
+       "count  1024.000000  1024.000000  1024.000000  1024.000000   1024.000000   \n",
+       "mean     57.023438    56.607422    54.626953    54.212891     71.319336   \n",
+       "std     165.228339   200.689886   163.769625   170.852745    541.245758   \n",
+       "min      50.000000    49.000000    47.000000    47.000000     47.000000   \n",
+       "25%      51.000000    49.000000    49.000000    48.000000     48.000000   \n",
+       "50%      52.000000    50.000000    49.000000    48.000000     49.000000   \n",
+       "75%      53.000000    51.000000    50.000000    50.000000     50.000000   \n",
+       "90%      54.000000    52.000000    51.000000    50.000000     51.000000   \n",
+       "99%      54.000000    53.000000    52.000000    52.000000     92.000000   \n",
+       "99.9%    61.839000   107.919000    58.839000    66.724000   5464.753000   \n",
+       "max    5339.000000  6472.000000  5290.000000  5516.000000  16464.000000   \n",
        "\n",
        "             Normal  \n",
        "count   1024.000000  \n",
-       "mean      96.928711  \n",
-       "std     1424.737928  \n",
+       "mean     104.146484  \n",
+       "std     1713.481841  \n",
        "min       49.000000  \n",
-       "25%       52.000000  \n",
-       "50%       53.000000  \n",
-       "75%       53.000000  \n",
+       "25%       50.000000  \n",
+       "50%       50.000000  \n",
+       "75%       51.000000  \n",
        "90%       53.000000  \n",
-       "99%       54.000000  \n",
-       "99.9%     71.793000  \n",
-       "max    45644.000000  "
+       "99%       53.000000  \n",
+       "99.9%     69.655000  \n",
+       "max    54882.000000  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,9 +200,17 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "%matplotlib inline\n",
-    "\n",
+    "# here we create a data frame from the csv file (relative directory to notebook)\n",
     "df=pd.read_csv('Bench.csv')\n",
+    "# describe() shows a quick statistic summary of your data:\n",
     "df.describe(percentiles=[.25, .5, .75, 0.9, 0.99, 0.999])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The raw data does contain some outliers so we can do some filtering to make it better, them plot it."
    ]
   },
   {
@@ -239,20 +257,6 @@
     "fig.text(0.5, 0.0, 'Time in nS', ha='center')\n",
     "fig.text(0.0, 0.5, 'Number of Samples', va='center', rotation='vertical')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
